inconsistent behaviour of the UV-editor while assigning uv textures. #32576

Closed
opened 2012-09-18 21:47:53 +02:00 by Gaia Clary · 4 comments
Member

%%%In the attached .blend file you find 2 cubes.
Both cubes have been unwrapped.
The left cube has just been assigned to a test pattern.
I have enabled "textured solid" and you can see the texture is correctly applied to the cube.
I have switched to object mode and seklected the other cube.


After you have opened the .blend file,

  • Go to edit mode (ensure all vertices are selected)
  • Now in the UV editor i see the UV-map as expected.

You also see the test pattern in the background of the UV-editor,
although the test pattern is not assigned to the object (as can be seen in the 3D view)

I expected to see the UV-layout on a grey background (to indicate that no image has been assigned yet)


Further more: If i now want to assign the test pattern to the right cube,
then i have to select the pattern although it is already selected in the UV-editor.

Furthermore: If i now click on the unlink-button then the just assigned image gets deassigned again (expected)
but when i now switch back to the cube on the left, then enter edit mode, then i see a grey background instead
of the testpattern.


This behaviour was different in older releases. there the currently selected uv-texture was always
displayed correctly as soon as i entered edit mode.


I tested on windows-7
build 50699%%%

%%%In the attached .blend file you find 2 cubes. Both cubes have been unwrapped. The left cube has just been assigned to a test pattern. I have enabled "textured solid" and you can see the texture is correctly applied to the cube. I have switched to object mode and seklected the other cube. **** After you have opened the .blend file, - Go to edit mode (ensure all vertices are selected) - Now in the UV editor i see the UV-map as expected. You also see the test pattern in the background of the UV-editor, although the test pattern is not assigned to the object (as can be seen in the 3D view) I expected to see the UV-layout on a grey background (to indicate that no image has been assigned yet) **** Further more: If i now want to assign the test pattern to the right cube, then i have to select the pattern although it is already selected in the UV-editor. Furthermore: If i now click on the unlink-button then the just assigned image gets deassigned again (expected) but when i now switch back to the cube on the left, then enter edit mode, then i see a grey background instead of the testpattern. **** This behaviour was different in older releases. there the currently selected uv-texture was always displayed correctly as soon as i entered edit mode. **** I tested on windows-7 build 50699%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed.

Developer note:
In my opinion the behavior of this functionality is a bit ambiguous. For instance, how do we handle multiple images on a mesh when all faces are selected? Do we display the image that belongs to the active face?%%%

%%%Confirmed. Developer note: In my opinion the behavior of this functionality is a bit ambiguous. For instance, how do we handle multiple images on a mesh when all faces are selected? Do we display the image that belongs to the active face?%%%

%%%It's just a missing notifier update, fix in svn. It's indeed the active face that is used to determine the image, can be a bit confusing at times, but it's already done this for 10 years or so :)%%%

%%%It's just a missing notifier update, fix in svn. It's indeed the active face that is used to determine the image, can be a bit confusing at times, but it's already done this for 10 years or so :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32576
No description provided.