Fix #32576: missing image editor update when entering edit mode with UV textures.